--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-__pycache__/*
-outputs/*
-.idea/*
-.idea/workspace.xml
-.idea/vcs.xml
-.idea/stl-slicer.iml
-.idea/modules.xml
-.idea/misc.xml
-dist/*
-build/*
+python/__pycache__/*
+python/outputs/*
+python/dist/*
+python/build/*
